--- a/ios-developer.html
+++ b/ios-developer.html
@@ -150,7 +150,7 @@ Boston, Massachusetts. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SkillDemand1/743999692020914-ios-developer'>SkillDemand iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SkillDemand1/743999692020914-ios-developer'>SkillDemand iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -232,7 +232,7 @@ label.</p>
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1721630'>Job Application for iOS Developer Barcelona at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1721630'>Job Application for iOS Developer Barcelona at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -252,7 +252,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oeoS9fwn'>Grid Dynamics Careers - iOS/C++ Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/griddynamics/job/oeoS9fwn'>Grid Dynamics Careers - iOS/C++ Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -308,7 +308,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sohohouse.workable.com/j/C1D2ED8CEF'>Soho House &amp; Co. - Jobs: iOS Developer - Apply online</a></h5> 
+<h5><a href='https://sohohouse.workable.com/j/C1D2ED8CEF'>Soho House &amp; Co. - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -354,7 +354,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Playtech/743999691320508-ios-developer'>Playtech iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
